cfg gazsim: set peer, cyan, and magenta ports to 0 on all robotinos
This enforces using the separate send and receive ports in simulation.

--- a/cfg/gazsim-configurations/default/host_robotino_2.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_2.yaml
@@ -75,6 +75,9 @@ clips-executive/specs/rcll2017/parameters/rcll:
   robot-number: 2
 
   peer-address: 127.0.0.1
+  peer-port: 0
+  cyan-port: 0
+  magenta-port: 0
   peer-recv-port: 4412
   peer-send-port: 4422
   cyan-recv-port: 4452
