--- a/cfg/gazsim-configurations/default/host_robotino_1.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_1.yaml
@@ -75,6 +75,9 @@ clips-executive/specs/rcll2017/parameters/rcll:
   robot-number: 1
 
   peer-address: 127.0.0.1
+  peer-port: 0
+  cyan-port: 0
+  magenta-port: 0
   peer-recv-port: 4411
   peer-send-port: 4421
   cyan-recv-port: 4451
