--- a/cfg/gazsim-configurations/default/host_robotino_4.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_4.yaml
@@ -69,6 +69,9 @@ clips-executive/specs/rcll2017/parameters/rcll:
   robot-number: 4
 
   peer-address: 127.0.0.1
+  peer-port: 0
+  cyan-port: 0
+  magenta-port: 0
   peer-recv-port: 4414
   peer-send-port: 4424
   cyan-recv-port: 4454
