--- a/cfg/gazsim-configurations/default/host_robotino_6.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_6.yaml
@@ -69,6 +69,9 @@ clips-executive/specs/rcll2017/parameters/rcll:
   robot-number: 6
 
   peer-address: 127.0.0.1
+  peer-port: 0
+  cyan-port: 0
+  magenta-port: 0
   peer-recv-port: 4416
   peer-send-port: 4426
   cyan-recv-port: 4456
