--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -106,7 +106,7 @@ clips-executive:
           - name: domain
             file: rcll2017/domain.clp
           - name: goal-reasoner
-            files: [rcll2017/goal-reasoner.clp, rcll2017/goal-production.clp]
+            files: [rcll2017/goal-reasoner.clp, rcll2017/goal-production.clp, rcll2017/exploration.clp]
           - name: goal-expander
             file: rcll2017/fixed-sequence.clp
           - name: action-selection
@@ -119,6 +119,7 @@ clips-executive:
 
       action-mapping:
         enter-field: drive_into_field{team=?(team-color)S}
+        explore-zone: explore_zone{zone=?(zone)S}
         move: ppgoto{place="?(to)Y-I"}
         go-wait: ppgoto{place="?(to)Y"}
         move-wp-put: ppgoto{place="?(to)Y-I"}
@@ -128,7 +129,9 @@ clips-executive:
         move-wp-get: ppgoto{place="?(to)Y-?(to-side|/OUTPUT/O/|/INPUT/I/)Y"}
         wp-get: get_product_from{place=?(m)S, side=?(side|/INPUT/input/|/OUTPUT/output/)s}
         wp-discard: ax12gripper{command="OPEN"}
-      blackboard-preload: ["Position3DInterface", "NavGraphWithMPSGeneratorInterface" , "NavGraphGeneratorInterface" , "NavigatorInterface", "AX12GripperInterface" , "MotorInterface"]
+        stop: relgoto{x=0, y=0}
+
+      blackboard-preload: ["Position3DInterface", "NavGraphWithMPSGeneratorInterface" , "NavGraphGeneratorInterface" , "NavigatorInterface", "AX12GripperInterface", "MotorInterface", "LaserLineInterface", "TagVisionInterface", "ZoneInterface"]
 
       parameters:
         rcll:
