--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -119,8 +119,8 @@ clips-executive:
 
       action-mapping:
         enter-field: drive_into_field{team=?(team-color)S}
-        explore-zone: explore_zone{zone=?(zone)S}
-        move-node: goto{place=?(zone)S} 
+        explore-zone: explore_zone{zone=?(z)}
+        move-node: goto{place=?(z)s} 
         move: ppgoto{place="?(to)Y-I"}
         move-wp-put: ppgoto{place="?(to)Y-I"}
         wp-get-shelf: get_product_from{place=?(m)S, shelf=?(spot)S}
@@ -159,6 +159,9 @@ clips-executive:
             # Reduce navigator velocity while traveling the field so we can find laser-lines more reliably
             max-velocity: 0.4
             max-rotation: 0.5
+            # Center of a laser-line must be this far from the zone border before we start
+            # investigating it further (i.e. call the explore_zone skill on it)
 
+            zone-margin: 0.15 
 
 
