--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -5,13 +5,16 @@ doc-url: !url http://trac.fawkesrobotics.org/wiki/Plugins/clips-executive
 ---
 clips-executive:
   # If true, will enable watching of facts and rules
-  clips-debug: true
+  debug:
+    enable: true
+    # debug level is a number of: 0 ~ none, 1 ~ minimal, 2 ~ more, 3 ~ maximum
+    level: 3
 
-  # If CLIPS debugging is enabled, certain rules and facts can be excluded
-  # from watching, e.g. if they are showing up at too high frequencies or
-  # are not of interest.
-  unwatch-facts: ["time"]
-  unwatch-rules: ["time-retract", "blackboard-read"]
+    # If CLIPS debugging is enabled, certain rules and facts can be excluded
+    # from watching, e.g. if they are showing up at too high frequencies or
+    # are not of interest.
+    unwatch-facts: ["time"]
+    unwatch-rules: ["time-retract", "blackboard-read"]
 
   # Currently not working in clips-executive!
   #
@@ -21,9 +24,6 @@ clips-executive:
   # simulate side effects, like a called component writing to an interface
   #skill-sim: true
   #skill-sim-time: 2.0
-
-  # debug level is a number of: 0 ~ none, 1 ~ minimal, 2 ~ more, 3 ~ maximum
-  debug-level: 3
 
   # automatically pre-require redefine-warning feature? Enabling
   # this in the plugin instead of in the initial code (init.clp) is
@@ -49,14 +49,6 @@ clips-executive:
   # Agent name. On startup the clips-agent will try to resolve a file named
   # <agent name>.clp. It must be in the CLIPS path directories.
   spec: rcll2017
-
-  # Use navgraph feature which adds facts for navgraph nodes.
-  use_navgraph: true
-  use_pddl: false
-  use_protobuf: true
-  use_tf: true
-  use_motor_switch: true
-  sync_domain_facts: false
 
   specs:
     test:
@@ -87,20 +79,43 @@ clips-executive:
       blackboard-preload: ["Position3DInterface"]
 
     rcll2017:
-      init: rcll2017/init.clp
-      communication: ["rcll2017/refbox-comm-init.clp", "rcll2017/refbox-worldmodel.clp"]
-      domain: rcll2017/domain.clp
-      goal-reasoner: [ "rcll2017/goal-reasoner.clp" , "rcll2017/goal-production.clp" ]
-      goal-expander: rcll2017/fixed-sequence.clp
-      action-selection: rcll2017/action-selection.clp
-      #macro-expansion: visit-all/action-selection.clp
-      action-execution: [
-        "skills-actions.clp",
-        "rcll2017/noop-actions.clp",
-        "rcll2017/refbox-actions.clp" ]
-      execution-monitoring: rcll2017/execution-monitoring.clp
-      state-estimation: rcll2017/state-estimation-init.clp
-      worldmodel: rcll2017/init-worldmodel.clp
+      init:
+        stage-1:
+          - name: pddl-parser
+          - name: motor-switch
+          - name: navgraph
+          - name: protobuf
+          - name: tf
+          - name: robmem-wait
+            feature-request: false
+            files: ["BATCH|robmem-wait-init.clp"]
+            wait-for: robmem-initialized
+          - name: robot_memory
+        stage-3:
+          - name: utils
+            file: rcll2017/utils.clp
+          - name: state-estimation
+            file: rcll2017/state-estimation-init.clp
+          - name: worldmodel
+            files: [
+                     rcll2017/init-worldmodel.clp,
+                     rcll2017/game-worldmodel.clp ]
+          - name: communication
+            files: [ rcll2017/refbox-comm-init.clp,
+                     rcll2017/refbox-worldmodel.clp ]
+          - name: domain
+            file: rcll2017/domain.clp
+          - name: goal-reasoner
+            files: [rcll2017/goal-reasoner.clp, rcll2017/goal-production.clp]
+          - name: goal-expander
+            file: rcll2017/fixed-sequence.clp
+          - name: action-selection
+            file: rcll2017/action-selection.clp
+          - name: action-execution
+            files:  [ skills-actions.clp, rcll2017/noop-actions.clp,
+                      rcll2017/refbox-actions.clp ]
+          - name: execution-monitoring
+            file: rcll2017/execution-monitoring.clp
 
       action-mapping:
         enter-field: drive_into_field{team=?(team-color)S}
