--- a/cfg/gazsim-configurations/default/host_robotino_2.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_2.yaml
@@ -84,3 +84,12 @@ clips-executive/specs/rcll2017/parameters/rcll:
   magenta-recv-port: 4462
   cyan-send-port: 4472
   magenta-send-port: 4482
+
+plugins/mongodb:
+  clients:
+    robot-memory-distributed-direct/hostport: localhost:27032
+  instances:
+    robot-memory-distributed:
+      port: 27032
+      data-path: /tmp/mongodb-robot-memory-distributed2
+      log/path: /tmp/mongodb-robot-memory-distributed2.log
