cfg/meta_plugins: load clips_robot_memory for m-clips-executive

--- a/cfg/conf.d/meta_plugins_laptop.yaml
+++ b/cfg/conf.d/meta_plugins_laptop.yaml
@@ -30,6 +30,7 @@ fawkes/meta_plugins:
     - m-fv-vision
     - clips-pddl-parser
     - m-robot-memory
+    - clips_robot_memory
     - clips-executive
     - clips-executive-rest-api
   m-skiller:
