--- a/cfg/conf.d/laser-filter.yaml
+++ b/cfg/conf.d/laser-filter.yaml
@@ -146,3 +146,30 @@ plugins/laser-filter:
         type: min_merge
         timestamp_selection: first
 
+  map:
+
+    # URG input interface
+    in/filtered: Laser360Interface::Laser urg-filtered
+
+    # URG filtered output interface
+    out/mapless: Laser360Interface::Laser mapless
+
+    filters:
+
+      1-map:
+        # filter to remove map parts of the laser
+        type: map_filter
+
+  non-static:
+
+    # URG input interface
+    in/mapless: Laser360Interface::Laser mapless
+
+    # URG filtered output interface
+    out/non-static: Laser360Interface::Laser non-static
+
+    filters:
+
+      1-map:
+        # filter to remove map parts of the laser
+        type: box_filter
