--- a/cfg/conf.d/meta_plugins_laptop.yaml
+++ b/cfg/conf.d/meta_plugins_laptop.yaml
@@ -47,6 +47,7 @@ fawkes/meta_plugins:
     - clips-pddl-parser
     - m-robot-memory
     - clips_robot_memory
+    - velocity_share
   m-robot-memory:
     - mongodb
     - robot-memory
