--- a/cfg/conf.d/bbsync.yaml
+++ b/cfg/conf.d/bbsync.yaml
@@ -56,5 +56,7 @@ fawkes/bbsync:
         laser-lines: SwitchInterface::laser-lines
         arduino: ArduinoInterface::Arduino
         laser_front_dist: Position3DInterface::front_dist
+        laser_box_filter: LaserBoxFilterInterface::Laser Box Filter
       writing:
         tfTags: TransformInterface::TF tags
+        laser_non_static: Laser360Interface::Laser MPS
