--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -30,34 +30,37 @@ plugins/conveyor_pose:
 
   # Path to the PCD file containing the conveyor model.
   # Relative paths (i.e. not starting with "/") are looked up in CONFDIR (e.g. fawkes-robotino/cfg)
-  model_file: "conveyor_model.pcd"
+  model_file: "conveyor_pcls/default.pcd"
 
   # Configurable PCD paths for every station containing the conveyor model
   # If the value is "default", the model_file PCD is taken
   model_files:
-    M-BS-I: "default"
-    M-BS-O: "default"
-    C-BS-I: "default"
-    C-BS-O: "default"
-    M-CS1-I: "default"
-    M-CS1-O: "default"
-    C-CS1-I: "default"
-    C-CS1-O: "default"
-    M-CS2-I: "default"
-    M-CS2-O: "default"
-    C-CS2-I: "default"
-    C-CS2-O: "default"
-    M-RS1-I: "default"
-    M-RS1-O: "default"
-    C-RS1-I: "default"
-    C-RS1-O: "default"
-    M-RS2-I: "default"
-    M-RS2-O: "default"
-    C-RS2-I: "default"
-    C-RS2-O: "default"
-    M-DS-I: "default"
-    C-DS-I: "default"
-
+    M-BS-I:  "conveyor_pcls/no_cone.pcd"
+    M-BS-O:  "conveyor_pcls/no_cone.pcd"
+    C-BS-I:  "conveyor_pcls/no_cone.pcd"
+    C-BS-O:  "conveyor_pcls/no_cone.pcd"
+    M-CS1-I: "conveyor_pcls/with_cone.pcd"
+    M-CS1-O: "conveyor_pcls/no_cone.pcd"
+    C-CS1-I: "conveyor_pcls/with_cone.pcd"
+    C-CS1-O: "conveyor_pcls/no_cone.pcd"
+    M-CS2-I: "conveyor_pcls/with_cone.pcd"
+    M-CS2-O: "conveyor_pcls/no_cone.pcd"
+    C-CS2-I: "conveyor_pcls/with_cone.pcd"
+    C-CS2-O: "conveyor_pcls/no_cone.pcd"
+    M-DS-I:  "conveyor_pcls/with_cone.pcd"
+    C-DS-I:  "conveyor_pcls/with_cone.pcd"
+    M-RS1-I: "conveyor_pcls/with_cone.pcd"
+    M-RS1-O: "conveyor_pcls/no_cone.pcd"
+    C-RS1-I: "conveyor_pcls/with_cone.pcd"
+    C-RS1-O: "conveyor_pcls/no_cone.pcd"
+    M-RS2-I: "conveyor_pcls/with_cone.pcd"
+    M-RS2-O: "conveyor_pcls/no_cone.pcd"
+    C-RS2-I: "conveyor_pcls/with_cone.pcd"
+    C-RS2-O: "conveyor_pcls/no_cone.pcd"
+    M-SS-I:  "conveyor_pcls/no_cone.pcd"
+    M-SS-O:  "conveyor_pcls/no_cone.pcd"
+    C-SS-I:  "conveyor_pcls/no_cone.pcd"
+    C-SS-O:  "conveyor_pcls/no_cone.pcd"
   icp:
     hint:
       conveyor:
@@ -126,4 +129,3 @@ plugins/conveyor_pose:
     right_cut_no_ll: 0.1
   voxel_grid:
     leaf_size: 0.001
-
