--- a/cfg/gazsim-configurations/gazsim-config-override.yaml
+++ b/cfg/gazsim-configurations/gazsim-config-override.yaml
@@ -122,3 +122,5 @@ plugins/mongodb:
     managed-sets:
       robot-memory-distributed/hosts:
         - localhost:27022
+
+clips-executive/specs/rcll2017/parameters/rcll/crypto-key: randomkey
