--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -12,7 +12,7 @@ fawkes/meta_plugins:
   m-clips: clips,clips-motor-switch,clips-protobuf,clips-rest-api,clips-navgraph,clips-tf
   m-clips-agent: m-clips,m-fv-vision,clips-agent
   m-robot-memory: mongodb,robot-memory
-  m-clips-executive: m-clips,m-fv-vision,clips-pddl-parser,m-robot-memory,clips_robot_memory,clips-executive,clips-executive-rest-api
+  m-clips-executive: m-clips,m-fv-vision,clips-pddl-parser,clips-executive,clips-executive-rest-api
   m-skiller: ros,m-fv-vision,navgraph,navgraph-generator,navgraph-generator-mps,skiller,realsense,conveyor-pose,ros-pcl,skiller-rest-api,mps-laser-gen
   m-full: m-skiller,m-clips-executive
 
