--- a/cfg/conf.d/meta_plugins_laptop.yaml
+++ b/cfg/conf.d/meta_plugins_laptop.yaml
@@ -26,11 +26,7 @@ fawkes/meta_plugins:
     - m-fv-vision
     - clips-agent
   m-clips-executive:
-    - m-clips
-    - m-fv-vision
-    - clips-pddl-parser
-    - m-robot-memory
-    - clips_robot_memory
+    - m-no-agent
     - clips-executive
     - clips-executive-rest-api
   m-skiller:
@@ -44,11 +40,17 @@ fawkes/meta_plugins:
     - conveyor-pose
     - ros-pcl
     - skiller-rest-api
+  m-no-agent:
+    - m-skiller
+    - m-clips
+    - m-fv-vision
+    - clips-pddl-parser
+    - m-robot-memory
+    - clips_robot_memory
   m-robot-memory:
     - mongodb
     - robot-memory
   m-full:
-    - m-skiller
     - m-clips-executive
 
 
