cx/rcll2017: tech-Hack, Go to waiting points if not master

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -120,6 +120,7 @@ clips-executive:
       action-mapping:
         enter-field: drive_into_field{team=?(team-color)S}
         move: ppgoto{place="?(to)Y-I"}
+        go-wait: ppgoto{place="?(to)Y"}
         move-wp-put: ppgoto{place="?(to)Y-I"}
         wp-get-shelf: get_product_from{place=?(m)S, shelf=?(spot)S}
         wp-put: bring_product_to{place=?(m)S}
@@ -140,3 +141,5 @@ clips-executive:
           team-name: Carologistics
           crypto-key: randomkey
           cipher: "aes-128-cbc"
+
+          master: R-2
