--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -83,16 +83,17 @@ plugins/conveyor_pose:
         x: -0.01
         y: -0.32
         z: 0.6
+    conveyor_offset:
       cap_station:
-        x: -0.025
+        y: -0.025
       ring_station:
-        x: -0.025
+        y: -0.025
       delivery_station:
-        x: -0.025
+        y: -0.025
       base_station:
-        x: -0.025
+        y: -0.025
       storage_station:
-        x: -0.025
+        y: -0.025
 
     max_correspondence_dist: 0.01
 
