conveyor vision: parameter tuning

--- a/cfg/conf.d/skills.yaml
+++ b/cfg/conf.d/skills.yaml
@@ -7,6 +7,8 @@ skills:
   # The distance the robot has to drive after being aligned
   # in front of the mps
   conveyor_align:
-    euclidean_fitness_tol: 8
+    euclidean_fitness_tol: 5
   mps_align:
     x_dist_default: 0.35
+  approach_mps:
+    x_dist: 0.28
