cx/rcll2017: C1 production, All necessary rules
Changes:
* Modifications and fixes for MOUNT-FIRST-RING goal
* PRODUCE-C1 goal and plan
* some typos fixes related to the Cx production
* configurations for which complexities are allowed

TODO:
* The time considerations for when to pursue c1 goals

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -167,7 +167,8 @@ clips-executive:
             latest-send-last-report-time: 210 # =3:30
 
           master: R-2
-          
+
           waitpoint-in-cyan: R-1
           waitpoint-in-cyan: R-2
           waitpoint-in-magenta: R-3
+          allowed-complexities: ["C0" , "C1"]
