cx/rcll2017: go-wait,hack wait in both sides of the field

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -143,3 +143,7 @@ clips-executive:
           cipher: "aes-128-cbc"
 
           master: R-2
+
+          waitpoint-in-cyan: R-1
+          waitpoint-in-cyan: R-2
+          waitpoint-in-magenta: R-3
