--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -90,7 +90,7 @@ plugins/conveyor_pose:
         x: -0.01
         y: -0.32
         z: 0.6
-    conveyor_offset:
+    mps_type_offset:
       cap_station:
         y: -0.025
       ring_station:
