--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -29,46 +29,12 @@ plugins/conveyor_pose:
   # the conveyor (align the conveyor cloud & the TF in rviz)
   model_origin_frame: "gripper_fingers"
 
-  # Path to the PCD file containing the conveyor model.
-  # Relative paths (i.e. not starting with "/") are looked up in CONFDIR (e.g. fawkes-robotino/cfg)
-  model_file: "conveyor_pcls/default.pcd"
-
-  # Paths to the default PCD models taking as reverence model in the conveyor pose model
+  # Paths to the default PCD models taking as reference model in the conveyor pose model
   reference_default_models:
     with_cone: "conveyor_pcls/default_with_cone.pcd"
     no_cone: "conveyor_pcls/default_no_cone.pcd"
     shelf: "conveyor_pcls/default_puck.pcd"
     slide: "conveyor_pcls/default_slide.pcd"
-
-  # Configurable PCD paths for every station containing the conveyor model
-  # If the value is "default", the model_file PCD is taken
-  model_files:
-    M-BS-I:  "conveyor_pcls/no_cone.pcd"
-    M-BS-O:  "conveyor_pcls/no_cone.pcd"
-    C-BS-I:  "conveyor_pcls/no_cone.pcd"
-    C-BS-O:  "conveyor_pcls/no_cone.pcd"
-    M-CS1-I: "conveyor_pcls/with_cone.pcd"
-    M-CS1-O: "conveyor_pcls/no_cone.pcd"
-    C-CS1-I: "conveyor_pcls/with_cone.pcd"
-    C-CS1-O: "conveyor_pcls/no_cone.pcd"
-    M-CS2-I: "conveyor_pcls/with_cone.pcd"
-    M-CS2-O: "conveyor_pcls/no_cone.pcd"
-    C-CS2-I: "conveyor_pcls/with_cone.pcd"
-    C-CS2-O: "conveyor_pcls/no_cone.pcd"
-    M-DS-I:  "conveyor_pcls/with_cone.pcd"
-    C-DS-I:  "conveyor_pcls/with_cone.pcd"
-    M-RS1-I: "conveyor_pcls/with_cone.pcd"
-    M-RS1-O: "conveyor_pcls/no_cone.pcd"
-    C-RS1-I: "conveyor_pcls/with_cone.pcd"
-    C-RS1-O: "conveyor_pcls/no_cone.pcd"
-    M-RS2-I: "conveyor_pcls/with_cone.pcd"
-    M-RS2-O: "conveyor_pcls/no_cone.pcd"
-    C-RS2-I: "conveyor_pcls/with_cone.pcd"
-    C-RS2-O: "conveyor_pcls/no_cone.pcd"
-    M-SS-I:  "conveyor_pcls/no_cone.pcd"
-    M-SS-O:  "conveyor_pcls/no_cone.pcd"
-    C-SS-I:  "conveyor_pcls/no_cone.pcd"
-    C-SS-O:  "conveyor_pcls/no_cone.pcd"
 
   voxel_grid:
     # Downsample all point clouds to this resolution
