--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -29,7 +29,11 @@ plugins/conveyor_pose:
   # the conveyor (align the conveyor cloud & the TF in rviz)
   model_origin_frame: "gripper_fingers"
 
-  # Paths to the default PCD models taking as reference model in the conveyor pose model
+  # Path to the default model used by the icp
+  # Relative paths (i.e. not starting with "/") are looked up in CONFDIR (e.g. fawkes-robotino/cfg)
+  default_model: "conveyor_pcls/default.pcd"
+
+  # Paths to the default PCD models taking as reference model in the conveyor pose plugin
   reference_default_models:
     with_cone: "conveyor_pcls/default_with_cone.pcd"
     no_cone: "conveyor_pcls/default_no_cone.pcd"
