arduino: new parameters for 4 axis gripper
The new arduino plugin requires 2 frames to be set up to fulfill the tf
tree (w.r.t. the conveyor camera).

The {x,y,z}_max values determine the limits of the axes in meters.

--- a/cfg/conf.d/arduino.yaml
+++ b/cfg/conf.d/arduino.yaml
@@ -22,3 +22,11 @@ arduino:
 
   # Interface ID for JoystickInterface to read data from
   joystick_interface_id: Joystick
+
+  gripper_frame_id: gripper_home
+  gripper_dyn_frame_id: gripper
+
+  # maximum space in x, y and z in meters
+  x_max: 0.115
+  y_max: 0.075
+  z_max: 0.057
