--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -94,6 +94,10 @@ plugins/conveyor_pose:
     # Offset of interesting objects relative to the center of the laser line
 
     hint:
+      default:
+        x: 0.015
+        y: 0.02
+        z: 0.6
       conveyor:
         x: 0.015
         y: -0.02
