conveyor_pose: Save recorded models without compression
Before Models were compressed by voxel_grid before saving them. Now
they are saved uncompressed and get compressed at loading time.

To support loading already compressed models, the uncompressed_model
switch was added into the config file.

--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -28,6 +28,11 @@ plugins/conveyor_pose:
   # a file is found that doesn't exist, yet.
   record_model: false
 
+  #To make voxel_grid/leaf_size changes possible after recording the model, those models 
+  #are now recorded uncompressed. This switch changes the behavior when loading the models,
+  #whether they get compress at load (true) or not (false, default)
+  uncompressed_model: false
+
   # If recording is enabled, a PCD file is written to CONFDIR "/" record path
   # (e.g.: conveyor_model_.pcd)
   record_path: "conveyor_model.pcd"
