cx/rcll2017: integrate exploration into goal lifecycle
Added creation of an exploration goal and make use of plan-actions
The exploration goal consists of a set of move actions that drives
around the field. The targets of these move actions are configurable

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -119,7 +119,8 @@ clips-executive:
 
       action-mapping:
         enter-field: drive_into_field{team=?(team-color)S}
-        explore-zone: explore_zone{zone=?(zone)S}
+        explore-zone: explore_zone{zone=?(z)}
+        move-node: goto{place=?(z)s}
         move: ppgoto{place="?(to)Y-I"}
         go-wait: ppgoto{place="?(to)Y"}
         move-wp-put: ppgoto{place="?(to)Y-I"}
@@ -150,3 +151,22 @@ clips-executive:
           waitpoint-in-cyan: R-1
           waitpoint-in-cyan: R-2
           waitpoint-in-magenta: R-3
+
+          route:
+            CYAN:
+              R-1: ["exp-12", "exp-11", "exp-22"]
+              R-2: ["exp-22", "exp-23", "exp-31"]
+              R-3: ["exp-31", "exp-32", "exp-21"]
+            MAGENTA:
+              R-1: ["exp-11", "exp-12", "exp-21"]
+              R-2: ["exp-22", "exp-21", "exp-32"]
+              R-3: ["exp-32", "exp-31", "exp-22"]
+
+          exploration:
+            # Reduce navigator velocity while traveling the field so we can find laser-lines more reliably
+            max-velocity: 0.4
+            max-rotation: 0.5
+            # Center of a laser-line must be this far from the zone border before we start
+            # investigating it further (i.e. call the explore_zone skill on it)
+
+            zone-margin: 0.15
