--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -110,13 +110,14 @@ clips-executive:
           - name: domain
             file: rcll2017/domain.clp
           - name: resource-locking
-            file: rcll2017/resource-locking.clp
+            file: resource-locks.clp
           - name: goal-reasoner
-            files: [rcll2017/goal-reasoner.clp, rcll2017/goal-production.clp, rcll2017/exploration.clp]
+            files:
+              - rcll2017/goal-reasoner.clp
+              - rcll2017/goal-production.clp
+              - rcll2017/exploration.clp
           - name: goal-expander
             file: rcll2017/fixed-sequence.clp
-          - name: goal-commitment
-            file: rcll2017/goal-commitment.clp
           - name: action-selection
             file: rcll2017/action-selection.clp
           - name: action-execution
