--- a/cfg/gazsim-configurations/gazsim-config-override.yaml
+++ b/cfg/gazsim-configurations/gazsim-config-override.yaml
@@ -126,12 +126,14 @@ plugins/mongodb:
     arbiter/enabled: false
     robot-memory-distributed/hosts:
       - localhost:27031
-      - localhost:27032
-      - localhost:27033
+    robot-memory-distributed-direct/hostport: localhost:27031
   replica-sets:
     bootstrap-mongodb/client: default
     managed-sets:
       robot-memory-distributed/hosts:
         - localhost:27031
-        - localhost:27032
-        - localhost:27033
+  instances:
+    robot-memory-distributed:
+      port: 27031
+      data-path: /tmp/mongodb-robot-memory-distributed
+      log/path: /tmp/mongodb-robot-memory-distributed.log
