--- a/cfg/conf.d/static_transforms.yaml
+++ b/cfg/conf.d/static_transforms.yaml
@@ -46,9 +46,9 @@ plugins/static-transforms:
     gripper_home:
       frame: !frame plate_top
       child_frame: !frame gripper_home
-      trans_x: 0.03
+      trans_x: 0.04
       trans_y: 0.0
-      trans_z: 0.17
+      trans_z: 0.147
 
     # Move the gripper to (0,0,0) in this frame to calibrate conveyor_pose
     conveyor_calib:
@@ -56,22 +56,22 @@ plugins/static-transforms:
       child_frame: !frame conveyor_calib
       trans_x: 0.114
       trans_y: 0
-      trans_z: -0.0
+      trans_z: 0
 
     cam_conveyor:
       frame: !frame gripper
       child_frame: !frame cam_conveyor
-      trans_x: 0.11
+      trans_x: 0.103
       trans_y: -0.027
-      trans_z: -0.05
+      trans_z: -0.067
       rot_yaw: -1.57
       rot_pitch: 0
       rot_roll: -1.57
 
     fingers:
-      frame: !frame cam_conveyor
+      frame: !frame gripper
       child_frame: !frame gripper_fingers
-      trans_z: 0.118
-      trans_x: -0.027
-      trans_y: -0.015
+      trans_x: 0.2
+      trans_y: 0
+      trans_z: -0.04
 
