cx/rcll2016: Apply configs needed for rcll2016
This is all whats needed to be able to play the 2016 game.

ToDo:find out why the robots drives drunk bumming into mps.

--- a/cfg/conf.d/gazsim.yaml
+++ b/cfg/conf.d/gazsim.yaml
@@ -27,6 +27,8 @@ gazsim:
     set-game-state: "~/LLSFRbSim/SetGameState/"
     set-game-phase: "~/LLSFRbSim/SetGamePhase/"
     set-team-name: "~/LLSFRbSim/SetTeamName/"
+    place-puck-under-machine: "~/LLSFRbSim/PlacePuckUnderMachine/"
+    remove-puck-under-machine: "~/LLSFRbSim/RemovePuckFromMachine/"
     message: "~/RobotinoSim/String/"
     gripper: "~/RobotinoSim/SetGripper/"
     conveyor: "~/RobotinoSim/SetConveyor/"
